# FastAPI

./: README.md  pyproject.toml
project/: __init__.py
project/routes/: __init__.py  calculate.py  default.py
