[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Leonidig <leonid200955@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
hypercorn = "^0.17.3"

[tool.poetry.scripts]
start = "project:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"